# esther

./: .clang-format  .clang-tidy  .doxygen  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeListsbackup.txt  COPYRIGHT  GITHUB_SETUP_GUIDE.md  ISSUES.md  LEARNING_RESOURCES.md  MILESTONE.md  Makefile  PROJECT_CHECKLIST.md  README.md  README_NEW.md  SUMMARY.md
assets/: .gitignore
assets/shaders/: README.md  basic.frag  basic.vert  lit.frag  lit.vert
docs/: .config  .doxygen  .gitignore  DOCUMENTATION.md  README.md
esther/: CMakeLists.txt
esther/assets/images/: icon.icns
esther/src/Engine/Manager/: CmakeLists.txt
esther/src/Engine/Utilities/: CMakeLists.txt
esther/src/Esther/: Game.cpp  Game.hpp  Main.cpp
game/: CMakeLists.txt  Game
game/doc/: .gitignore
game/lib/: CmakeConfig.hpp.in  GameConfig.h  GameConfig.h.in  WindowEnvironment.h
game/lib/Engine/: AssetManager.hpp  AudioManager.hpp  Controller.hpp  EventManager.hpp  FontManager.hpp  GameEngine.hpp  GameLoop.hpp  WindowManager.hpp
game/lib/Engine/Event/: EventReader.hpp  EventState.hpp  InputState.hpp
game/lib/Engine/Manager/: EventManager.hpp  FontManager.hpp  WindowManager.hpp
game/lib/Engine/Utilities/: FPSCounter.hpp
game/lib/Game/: Game.hpp
game/lib/engine/: Engine.h  Window.h
game/src/: main.cpp
game/src/Engine/: AssetManager.cpp  AudioManager.cpp  FontManager.cpp  GameEngine.cpp  GameLoop.cpp  Test.cpp  Window.cpp  WindowManager.cpp
game/src/Engine/Manager/: AssetManager.cpp  AudioManager.cpp  WindowManager.cpp
game/src/Engine/Utilities/: FPSCounter.cpp
game/src/Game/: Game.cpp
include/: Build.hpp  Build.hpp.in  BuildConfig.hpp.in  RuntimeConfiguration.hpp.in
include/Engine/: Engine.hpp  Game.hpp  Logger.hpp
include/Engine/Core/: GameController.hpp  GameLoop.hpp  Renderer.hpp
include/Engine/Core/Managers/: LoggerManager.hpp  ResourceManager.hpp
include/Engine/Core/Utils/: Logger.hpp
include/Engine/Utilities/: Logger.hpp
include/app/Esther/: Esther.hpp
include/modules/Engine/Core/: GameLoop.hpp
scripts/: build.sh
src/: .CMakeLists.txt  CMakeLists.txt  main.cpp
src/Engine/: CMakeLists.txt  Engine.cpp  Game.cpp  GameEngine.cpp
src/Engine/Core/: CMakeLists.txt  GameController.cpp  GameLoop.cpp
src/Engine/Core/Managers/: CMakeLists.txt  LoggerManager.cpp
src/Engine/Manager/: CmakeLists.txt
src/Engine/Utilities/: CmakeLists.txt  Font.cpp  GameLoop.hpp  Logger.cpp
src/Esther/: CMakeLists.txt  Game.cpp
src/_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Esther
src/app/Esther/: Esther.cpp
src/modules/Engine/: CMakeLists.txt  Engine.cpp  Game.cpp
src/modules/Engine/Core/: GameController.cpp
src/modules/Engine/Core/Managers/: LoggerManager.cpp
src/modules/Engine/Utilities/: CmakeLists.txt  Renderer.cpp
sxsw/: CMakeLists.txt  CMakeListshh copy.txt  License.txt
sxsw/assets/images/: .gitignore
sxsw/lib/: CmakeConfig.hpp
sxsw/src/: CMakeLists.txt
sxsw/src/Engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.hpp  GameLoop.cpp
sxsw/src/Engine/GameLoop/: CmakeLists.txt  GameLoop.hpp
sxsw/src/Engine/GameLoop/Utilities/: FPSCounter.cpp
sxsw/src/Engine/Manager/: Asset.cpp  Asset.hpp  Audio.cpp  Audio.hpp  CmakeLists.txt  Font.cpp  Window.cpp
sxsw/src/Engine/Utilities/: CMakeLists.txt  CmakeLists.txt  FPSController.cpp  FPSController.hpp
sxsw/src/Pong/: CMakeLists.txt  main.cpp
sxsw/src/SXSW/: CMakeLists.txt  Game.cpp  main.cpp  test.cpp  test.hpp
